<resources>
    <string name="app_name">GET FIT</string>
    <string name="nutrition_navigation">Navigation Menu</string>
    <string name="btnAddMeal">Add a Meal Plan</string>
    <string name="btnMacros">Macros</string>
    <string name="btnViewMeal">View Meal Plans</string>
    <string name="btnAdd">ADD</string>
    <string name="txtMacroFoodName">Name of the food</string>
    <string name="txtMacroName" />
    <string name="txtViewServing" />
    <string name="txtServingSize">Serving Size</string>
    <string name="btnFindMacro">Find Macros</string>
    <string name="txtEnergy">Energy</string>
    <string name="txtViewEnergy" />
    <string name="txtFat">Fat</string>
    <string name="txtViewFat" />
    <string name="txtCarbs">Carbohydrates</string>
    <string name="txtViewCarbs" />
    <string name="txtFiber">Fiber</string>
    <string name="txtViewFiber" />
    <string name="txtProtein">Protein</string>
    <string name="txtViewProtein" />
    <string name="txtSodium">Sodium</string>
    <string name="txtViewSodium" />
    <string name="txtCholesterol">Cholesterol</string>
    <string name="txtViewCholesterol" />
    <string name="txtPotasium">Potasium</string>
    <string name="txtViewPotasium" />
    <string name="btnUpdate">Update</string>
    <string name="btnAddMacros">Add</string>
    <string name="txtViewFoodID">Food ID</string>
    <string name="txtViewFoodName">Food Name</string>
    <string name="txtInFoodId" />
    <string name="txtInFoodName" />
    <string name="macro_cal">Macro Calculator</string>
    <string name="macro_add_navigation">Add Macro Record</string>
    <string name="add_meal">Add a Meal</string>
    <string name="update_meal_navigation">Update Meal Plan</string>
    <string name="view_meals_navigation">Meal Plans</string>
    <string name="macros_navigation">Added Macros</string>
    <string name="btnBMICal">BMI CALCULATOR</string>
    <string name="btnWeightCon">WEIGHT CONVERTOR</string>
    <string name="btnMacroCal">MACRO FINDER</string>

    <string name="btn7">Add Supplement</string>
    <string name="btn8">Update Supplement</string>
    <string name="btn9">Delete Supplement</string>
    <string name="btn10">View Supplement</string>
    <string name="txt">Supplement Maintenence</string>
    <string name="txtsup">BMI Calculator</string>
    <string name="txtweight">Enter weight in kg</string>
    <string name="txtheight">Enter height in cm</string>
    <string name="btnCalc">Calculate</string>
    <string name="btnresult">Your result</string>
    <string name="txtplain" />
    <string name="txtplain1" />
    <string name="txtadd">Add Supplement</string>
    <string name="txtid">Supplement id</string>
    <string name="txtname">Supplement name</string>
    <string name="txtprice1">Price</string>
    <string name="txtdesc1">Description</string>
    <string name="btnadd1">Add</string>
    <string name="txtupdate">Update Supplement</string>
    <string name="txtid3">Supplement id</string>
    <string name="txtname3">Supplement name</string>
    <string name="txtprice4">Price</string>
    <string name="txtdesc3">Description</string>
    <string name="btnupdate3">Update</string>
    <string name="txtview4">View Supplement</string>
    <string name="txt4">Supplement id</string>
    <string name="txt5">Supplement name</string>
    <string name="txt6">Price</string>
    <string name="txt7" />
    <string name="txt8">Description</string>
    <string name="plain3" />

    <string name="plain5" />
    <string name="plain6" />
    <string name="txtdelete">Delete Supplement</string>
    <string name="txtid10">Supplement id</string>
    <string name="btndelete">Delete</string>
    <string name="supname">Supplement Maintenence</string>
    <string name="txtsuppid">Supplement Id</string>
    <string name="txtsupid">Supplement Id</string>
    <string name="plainsupid" />
    <string name="txtsupName">Supplement Name</string>
    <string name="plainsupname" />

    <string name="plainsupprice" />

    <string name="plainsupdesc" />
    <string name="supadd">Add Supplement</string>
    <string name="txtsupname">Supplement Name</string>
    <string name="txtsupname1" />
    <string name="txtsupprice">Price</string>
    <string name="txtsupdesc">Description</string>
    <string name="btnadd">Add</string>
    <string name="update_button">Update</string>
    <string name="bmi">BMI Calculator</string>
    <string name="update_button1">Update</string>
    <string name="delete_button">Delete</string>
    <string name="txtCalories">Calories</string>
    <string name="mealID">Meal ID</string>
    <string name="meal_Name">Meal Name</string>
    <string name="nutrition_delete_confirm">Do you want to delete this Meal Plan?</string>

    <string name="btnAddExercise">ADD EXERCISE</string>
    <string name="btnDeleteExercise">DELETE EXERCISE</string>
    <string name="btnWeightConverter">WEIGHT CONVERTER</string>
    <string name="btnUpdateExercise">UPDATE EXERCISE</string>
    <string name="WorkOutId">WorkOut Id</string>
    <string name="WorkOutName">WorkOut Name</string>
    <string name="WorkOutPackageType">Package Type</string>
    <string name="WorkOutCalorieBurnt">Calorie Burnt</string>
    <string name="WorkOutDuration">Duration</string>
    <string name="WorkOutsteps">Steps</string>
    <string name="WorkOutminutes">min</string>
    <string name="WorkOutAddExercise">ADD EXERCISE</string>
    <string name="WorkOutAddBtn">ADD</string>
    <string name="startButton">START</string>
    <string name="StopButton">STOP</string>
    <string name="TimeDownCounter">TIME DOWN COUNTER</string>
    <string name="kgToPounds">Kilograms to Pounds</string>
    <string name="PoundsToKg">Pounds To Kilograms</string>
    <string name="kgToStones">Kilograms To Stones</string>
    <string name="weightConvertBtn">Convert</string>
    <string name="weightConverter">WEIGHT CONVERTER</string>
    <string name="ModifyExercise">MODIFY EXERCISE</string>
    <string name="Workoutdeletebtn">DELETE</string>
    <string name="WorkOutupdatebtn">UPDATE</string>
    <string name="WorkOutShowbtn">RESET</string>
    <string-array name="Spinner_Item">
        <item>Muscle-Gain</item>
        <item>Fat-Loss</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fatLoss">FAT-LOSS</string>
    <string name="muscleGain">MUSCLE-GAIN</string>
    <string name="ViewExeHint1">Enter No of Repeats</string>
    <string name="calorieBurnOutBtn">CALORIES BURN OUT</string>
    <string name="WorkOutTimePeriod">Time Period(min)</string>
    <string name="WorkOutStart">START</string>
    <string name="MuscleGainBtn">MUSCLE GAIN WORKOUT</string>
    <string name="FatLossBtn">FAT-LOSS WORKOUT</string>
    <string name="WOpackages">WORK-OUT PACKAGES</string>
    <string name="woAllWorkOuts">List of Workouts</string>
    <string name="moveToWCBtn">Weight Converter</string>
    <string name="WorkOutAddImgBtn">Upload Img</string>
    <string name="ImageUploadTv">Upload an Image</string>
    <string name="wo_ImgUploadDltBtn">DELETE IMAGE</string>
    <string name="wo_ImgUploadSaveBtn">SAVE IMAGE</string>
    <string name="WorkOutGetImagebtn">Image</string>
    <string name="woShowImage">WorkOut Image</string>
    <string name="ViewExeImgUpdateBtn">CHANGE IMAGE</string>
    <!-- side nav bar -->
    <string name="Open">OPEN</string>
    <string name="Close">CLOSE</string>

    <string name="SignUptxtName">User Name</string>
    <string name="SignUptxtEmail">Email</string>
    <string name="SignUptxtPassword">Password</string>
    <string name="SignUptxtGender">Gender</string>
    <string name="SignUptxtHeight">Height</string>
    <string name="SignUptxtWeight">Weight</string>
    <string name="SignUptxtAge">Age</string>
    <string name="SignUpName" />
    <string name="SignUpEmail" />
    <string name="SignUpPassword" />
    <string name="SignUpGender" />
    <string name="SignUpbtnSignUp">SIGN UP</string>
    <string name="SignUpbtnSignIn">SIGN IN</string>
    <string name="SignUp">Sign Up</string>
    <string name="BMIResult">Result</string>
    <string name="txtHealthyBMI">Healthy BMI</string>
    <string name="txtHealthyWeight">Healthy Weight</string>
    <string name="txtResultHbmi" />
    <string name="txtResultHweight" />
    <string name="ResultBMI">BMI</string>
    <string name="UPtxt">User Profile</string>
    <string name="UPbtnUpdate">Update Details</string>
    <string name="UPtxtDelete">Delete Account</string>
    <string name="todotxt">To Do List</string>
    <string name="SignInuser_name">User Name</string>
    <string name="SignInPassword">Password</string>
    <string name="SignInpassword">Password</string>
    <string name="SignInbtnSignIn">SIGN IN</string>
    <string name="SignIntxtNewUser">Are you new to GET-FIT?</string>
    <string name="SignInNewUserSignUp">Sign Up</string>
    <string name="SignIntxtForgotpass">Forgot your password?</string>
    <string name="SignInpasswordReset">Reset</string>
    <string name="txtList_name">To Do List</string>
    <string name="SignIn">SIGN IN</string>
    <string name="button">BMI</string>
    <string name="GETFIT">GET  FIT!</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button_mealSearch">Find</string>
    <string name="navBarProfile" textSize="18sp" >Profile</string>
    <string name="supplement_txt_name">Supplement</string>

</resources>