<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nutrition.macroCal">


    <EditText
        android:id="@+id/numInServSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="serving size in cups"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtMacroFoodName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtInFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtMacroName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtServingSize"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInFood" />

    <Button
        android:id="@+id/btnFindMacro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnFindMacro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numInServSize" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindMacro">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtEnergy"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="3dp"
                android:text="@string/txtEnergy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewEnergy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewEnergy"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtFat"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="3dp"
                android:text="@string/txtFat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewFat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewFat"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtCarbs"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtCarbs"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewCarbs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewCarbs"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtFiber"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtFiber"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewFiber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewFiber"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtProtein"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtProtein"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewProtein"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewProtein"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtSodium"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtSodium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewSodium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewSodium"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/txtCholesterol"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtCholesterol"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewCholesterol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtViewCholesterol" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/textView43"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtPotasium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewPotasium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtViewPotasium"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/txtCalories"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewCalories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text=""
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/todoBtn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#1ebeff"
            android:drawableTop="@drawable/todo"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#1ebeff"
            android:drawableTop="@drawable/fitness"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#1ebeff"
            android:drawableTop="@drawable/nutrition"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#1ebeff"
            android:drawableTop="@drawable/supplement"
            app:cornerRadius="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>