<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDo_List.SignIn"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="@drawable/logoutbg"
        app:srcCompat="@drawable/logoutbg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="411dp"
        android:layout_height="296dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <EditText
        android:id="@+id/SignInUserName"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="80dp"
        android:hint="@string/SignInuser_name"/>

    <EditText
        android:id="@+id/SignInPassword"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="80dp"
        android:hint="@string/SignInpassword"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/SignIn"
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="500dp"
        android:text="@string/SignIn"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="560dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SignIntxtNewUser"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:text="@string/SignIntxtNewUser"
            android:layout_marginLeft="30dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/SignIntxtNewUserLink"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/SignInNewUserSignUp"
            android:textSize="18dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="610dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SignIntxtForgotPassword"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:text="@string/SignIntxtForgotpass"
            android:layout_marginLeft="30dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/SignIntxtForgotPasswordLink"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/SignInpasswordReset"
            android:textSize="18dp"/>

    </LinearLayout>



</RelativeLayout>