<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDo_List.SignUp">


    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/SignUp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SignUptxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp" />

    <TextView
        android:id="@+id/SignUptxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtEmail"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtName" />

    <TextView
        android:id="@+id/SignUptxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtEmail" />

    <TextView
        android:id="@+id/SignUptxtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtGender"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtPassword" />

    <TextView
        android:id="@+id/SignUptxtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtHeight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtGender" />

    <TextView
        android:id="@+id/SignUptxtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SignUptxtWeight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUptxtAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtHeight" />

    <TextView
        android:id="@+id/SignUptxtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/SignUptxtAge"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUpbtnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtWeight" />

    <EditText
        android:id="@+id/SignUpName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="@string/SignUpName"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType=""
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtEmail"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/SignUpGender"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType=""
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtGender"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/SignUpPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="@string/SignUpPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/SignUpHeight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="                                            cm"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtHeight"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/SignUpWeight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="                                            Kg"
        android:inputType="number|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtWeight"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/SignUpAge"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUptxtAge"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/SignUpbtnSignUp"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/SignUpbtnSignUp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SignInbtnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpAge" />

    <Button
        android:id="@+id/SignInbtnSignIn"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:text="@string/SignUpbtnSignIn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpbtnSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>